--- a/src/main/webapp/WEB-INF/jsp/common/header.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/header.jspf
@@ -3,8 +3,11 @@
 
 <!DOCTYPE html>
 <html>
-
-<!-- display the Logo and title of the website  -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 <body>
 <head>
     <meta charset="UTF-8">
@@ -22,7 +25,7 @@
          <br>
          
 <div class="topnav">
-  <a class="active" href="#Home">Home</a>
+  <a class="active" href="/m3-java-capstone/">Home</a>
   <a href="#Survey">Survey</a>
 </div>
          
