--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -14,4 +14,23 @@ img.logoImage {
 body{
   background: radial-gradient(Orange, red, dodgerblue);
 }
+.alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
 }
