--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -1,3 +1,7 @@
+header{
+	background-color: #e0dfe1;
+}
+
 img.logoImage {
 	width: 50%;
 	height: 50%;
@@ -5,25 +9,84 @@ img.logoImage {
 }
 .topnav{
 	overflow: hidden;
-	background-color:#808080;
+	background-color:#1b5f00;
 }
 
 .imageForPark{
-border: 2px solid red;
- border-radius: 50px 20px;
+	border: 2px solid red;
+ 	border-radius: 50px 20px;
 }
 
-.topnav a { float: left; color: #ffcba7; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px; }
- .topnav a:hover { background-color: #d48d4e; color: black; }
-  .topnav a.active { background-color: #febc7b; color: white; }
+.topnav a { 
+	float: left; 
+	color: #000000; 
+	text-align: center; 
+	padding: 14px 16px; 
+	text-decoration: none; 
+	font-size: 17px;
+	font-weight: bold; 
+	}
+	
+ .topnav a:hover { 
+ 	background-color: #9b4b1f; 
+ 	color: black; 
+ 
+ }
+  .topnav a.active { 
+  	background-color: #9b4b1f;
+  	color: Black; 
+  	font-weight: bold;
+  	}
 
 body{
-  background: radial-gradient(green, orange, dodgerblue);
+  	background: radial-gradient(green, orange, dodgerblue);
+    width: 100%;
+    padding: 25px;
+    margin: 25px;
 }
+
+div.clearfix{
+	width: 100%;
+	padding: 2%;
+	overflow: auto;
+	text-align: center;
+}
+
+p.parkName{
+	font-size:3em;
+	text-align: center;
+	font-weight: bold;
+}
+
+img.homeParks{
+	float:left;
+	padding: 10px;
+	display:block;
+}
+
+h3.quote{
+	text-align: center;
+}
+
+p.tableOfFacts{
+	font-size:1.5em;
+	font-weight: bold;
+}
+
+div.table-width.media-left{
+	
+}
+
 .alert {
     padding: 20px;
     background-color: #f44336;
     color: white;
+    text-aligm: center;
+  	width:50%;    
+  	display: center;
+
+  	position: center;
+  	
 }
 
 .closebtn {
@@ -40,28 +103,52 @@ body{
 .closebtn:hover {
     color: black;
 }
-.today{
-width:
-} 
 
-.today h3{
-text-align: center;
-background: radial-gradient(violet, orange, red);
-width:50%
-float:middle;
-height:30px;
+section {
+    width: 200px;
+    padding: 16px;
+    margin-bottom: 60px;
+    text-align: center;
+    box-sizing: border-box;
+    display: block;
+    background-color: white;
+    box-sizing: border-box;
 }
 
-.weatherForAll{
-width:50%;
-height:50%;
-padding:50px;
-margin:50px;
+section.today{
+	background-color:white;
+	font-weight: bold;
 }
+
+div.forecast{
+	font-weight:bold;
+	font-size:1.1em;
+}
+
+section.today img{
+	width:100%;
+}
+
+section img{
+	width: 100%;
+}
+
+.card-wrapper {
+    position: relative;
+    margin: auto;
+    overflow: visible;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
 .topParks{
 	padding: 20px;
 	text-align: center;
 }
+
 .congratsImage {
 	width: 150px;
 	margin:20px;
@@ -70,29 +157,18 @@ margin:50px;
     border-radius: 50px 20px;
 }
 
- .parkName{
-	float:left;
-	margin:20px;
-	padding:20px;
-	
-}
 pre {
    font-family: "courier new", courier, monospace;
    font-size: 20px;
-   
 }
+
 .topImage{
 border: 5px solid black;
     padding: 10px;
     border-radius: 25px 25px;
-      border-radius: 25px;
+    border-radius: 25px;
     padding: 20px; 
     width: 200px;
     height: 150px;    
 }
     
-    
-    
-    
-}
-}
