--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -57,6 +57,9 @@ p.parkName{
 	text-align: center;
 	font-weight: bold;
 }
+p.votes{
+	font-size: 1.5em;
+}
 
 img.homeParks{
 	float:left;
@@ -84,7 +87,6 @@ div.table-width.media-left{
     text-aligm: center;
   	width:50%;    
   	display: center;
-
   	position: center;
   	
 }
@@ -113,6 +115,8 @@ section {
     display: block;
     background-color: white;
     box-sizing: border-box;
+    	border: 2px solid black;
+    border-radius: 5px;
 }
 
 section.today{
@@ -141,7 +145,6 @@ section img{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-
 }
 
 .topParks{
@@ -171,4 +174,26 @@ border: 5px solid black;
     width: 200px;
     height: 150px;    
 }
+img.storm{
+    animation: shake 0.5s; 
+    animation-iteration-count: infinite; 
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+
+}
+
+
+
     
