made few changes

--- a/src/main/webapp/WEB-INF/jsp/common/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/footer.jspf
@@ -1,3 +1,10 @@
 </body>
-<p>  &copy by awesome People from Parma.</p>
+
+
+
+
+<div class="footer">
+  <p>&copy Mike and Gurpreet - Tech Elevator!</p>
+</div>
+
 </html>
