pushing for final

--- a/src/main/webapp/WEB-INF/jsp/common/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/footer.jspf
@@ -4,7 +4,7 @@
 
 
 <div class="footer">
-  <p>&copy Mike and Gurpreet - Tech Elevator!</p>
+  <p>&copy by Mike and Gurpreet - Tech Elevator.</p>
 </div>
 
 </html>
