--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -216,7 +216,18 @@ hr.styleHr {
   background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
 }
 
-
-
+.formForSurvey{
+	align:center;
+	
+}
+.form{
+	align:center;
+}
+.formGroup{
+	margin-top:20px;
+}
+.activitylevel{
+	margin-top:20px;
+}
 
     
